src/styles/BlogPost.module.scss
.main {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;

  a {
    color: lightgreen;
    @media (prefers-color-scheme: light) {
      filter: drop-shadow(.1rem .1rem .1rem black);
      text-shadow: -1px -1px 1px #000, 1px -1px 1px #000, -1px 1px 1px #000, 1px 1px 1px #000;
    }
  }

  .postNav {
    display: flex;
    justify-content: space-between;
    gap: 1rem;
    margin-top: 2rem;
    padding-top: 1rem;
    border-top: 1px solid rgba(255, 255, 255, 0.2);

    @media (prefers-color-scheme: light) {
      border-top-color: rgba(0, 0, 0, 0.15);
    }

    a {
      display: flex;
      flex-direction: column;
      gap: 0.25rem;
      max-width: 45%;
      text-decoration: none;

      > span:first-child {
        font-size: small;
        opacity: 0.7;
      }

      > span:last-child {
        font-weight: bold;
      }
    }

    .nextPost {
      align-items: flex-start;
    }

    .prevPost {
      align-items: flex-end;
      margin-left: auto;
    }
  }

  > article {

    // Article Header
    > header {

      > figure, h1, address, p, section {
        margin-bottom: 1rem;
      }

      > figure {
        height: 350px;
        position: relative;
        > img {
          object-fit: cover;
          border: 1rem solid white;
          filter: grayscale(1);
        }
      }
      > h1 {
        font-size: xxx-large;
      }
      > address {
        display: flex;
        align-items: center;
        > img {
          vertical-align: middle;
          border-radius: 100%;
          border: .2rem solid gold;
          margin: 0 .5rem 0 0;
        }
      }
      > p {
        font-size: x-large;
      }
    }
  }
}

